unifi/unifi-controller-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: unifi
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  serviceName: unifi-controller
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: linuxserver/unifi-controller:7.4.156
          imagePullPolicy: IfNotPresent
          name: unifi-controller
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          volumeMounts:
            - mountPath: /config
              name: unifi-ssd
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
      restartPolicy: Always
      volumes:
        - name: unifi-ssd
          persistentVolumeClaim:
            claimName: unifi-ssd
      nodeSelector:
        kubernetes.io/arch: arm64
        kubernetes.io/os: linux
