unifi/unifi.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unifi
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
        - name: mongo-init-script
          configMap:
            name: unifi-controller-mongo-init-script
      containers:
        - name: unifi-network-application
          image: lscr.io/linuxserver/unifi-network-application:8.1.113
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          volumeMounts:
            - name: unifi
              mountPath: /config
          resources:
            requests:
              cpu: 2
              memory: 2Gi
            limits:
              memory: 2Gi
