unifi/unifi.statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: unifi
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  serviceName: unifi-controller
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
        - name: mongo-init-script
          configMap:
            name: unifi-controller-mongo-init-script
      containers:
        - name: unifi-network-application
          image: lscr.io/linuxserver/unifi-network-application:7.5.187
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          volumeMounts:
            - name: unifi
              mountPath: /config
          resources:
            requests:
              cpu: 2
              memory: 1.5Gi
            limits:
              memory: 3Gi
