unifi/unifi-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: unifi
  name: unifi-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
  - hosts:
      - ${UNIFI_HOST}
    secretName: unifi-cert
  rules:
  - host: ${UNIFI_HOST}
    http:
      paths:
        - backend:
            service:
              name: unifi-controller
              port:
                number: 8443
          path: /
          pathType: Prefix
