unifi/unifi-controller-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: unifi
  name: unifi-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - "${UNIFI_HOST}"
      secretName: unifi-cert
  rules:
    - host: "${UNIFI_HOST}"
      http:
        paths:
          - backend:
              service:
                name: unifi-controller
                port:
                  number: 8443
            path: /
            pathType: Prefix
