unifi/unifi.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: unifi
  name: unifi-controller
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
      more_set_headers "server: hide";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Cross-Origin-Resource-Policy: same-site";
      more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "${UNIFI_HOST}"
      secretName: unifi-cert
  rules:
    - host: "${UNIFI_HOST}"
      http:
        paths:
          - backend:
              service:
                name: unifi-controller
                port:
                  number: 8443
            path: /
            pathType: Prefix
